Fixed an issue with image being too big on full hd resolution

--- a/styles/veetintyyli.css
+++ b/styles/veetintyyli.css
@@ -42,7 +42,7 @@ footer p {
 img {
     position: relative;
     display: block;
-    max-width: 25%;
+    max-width: 20%;
     border: 6px solid;
     border-radius: 30px;
     border-color: #A6B37D;
